modules/gdscript/tests/scripts/analyzer/errors/immutable_class_member_attempt_to_modify.gd
let immutable_member = 0.0

func test():
	immutable_member = 1.0
